# rag-knowledge-base

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  README.md  REFERENCES.md  project.yaml  pyproject.toml
.aitmpl/: context-card.md
.claude/skills/portfolio-project/: SKILL.md
.codex/skills/reuse-improvement-review/: SKILL.md
.github/workflows/: validate.yml
.portfolio-control/: CRITICAL_PATH.md  DECISIONS.md  INVENTORY.md  QUALITY_GATES.md  REUSE_MAP.md
benchmarks/results/: retrieval-baseline.json
data/fixtures/: corpus.jsonl  questions.jsonl
openspec/: config.yaml
openspec/artifacts/: architecture-record.md  article-draft.md  benchmark-proof.md  component-pack.md  intent.md  portfolio-impact.md  reuse-delta.md  tasks.md  verification.md  voice-check.md
openspec/changes/baseline/: design.md  proposal.md  tasks.md
openspec/changes/baseline/specs/rag-knowledge-base/: spec.md
sdd/: agent-handoff.md  architecture-decision.md  benchmark-plan.md  release-checklist.md  reuse-improvement-review.md  spec.md  technical-decision.md
src/rag_knowledge_base/: __main__.py
src/rag_knowledge_base/application/: chunking.py  use_cases.py
src/rag_knowledge_base/domain/: models.py  ports.py
src/rag_knowledge_base/infrastructure/: composition.py
src/rag_knowledge_base/infrastructure/embeddings/: hashing.py
src/rag_knowledge_base/infrastructure/stores/: json_vector_store.py
src/rag_knowledge_base/interfaces/: api.py  cli.py
tests/: test_api.py  test_retrieval.py
tools/: validate-project.ps1
