[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knowledge-base"
version = "0.2.0"
description = "Local-first RAG knowledge base with deterministic vector retrieval and reproducible benchmark."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1.0"]

[project.scripts]
rag-kb = "rag_knowledge_base.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
